{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 178,
  "lineage": "619b948b-42f7-9fbb-037b-519f9cd7e809",
  "resources": [
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "unauthenticated_access_for_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.atlantis",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "unauthenticated_access_for_webhook",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.atlantis.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "atlantis-access-logs-162193915932-eu-west-1",
                "enabled": true,
                "prefix": "atlantis-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:loadbalancer/app/github-complete/c4e6024aacf028c2",
            "arn_suffix": "app/github-complete/c4e6024aacf028c2",
            "dns_name": "github-complete-1992949973.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:loadbalancer/app/github-complete/c4e6024aacf028c2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "github-complete",
            "security_groups": [
              "sg-02400d1b00a7067e7",
              "sg-09457112906412109"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c9f8bf24abbc9cf"
              },
              {
                "subnet_id": "subnet-072245edf48b038e9"
              },
              {
                "subnet_id": "subnet-08171a19afdceb7d0"
              }
            ],
            "subnets": [
              "subnet-04c9f8bf24abbc9cf",
              "subnet-072245edf48b038e9",
              "subnet-08171a19afdceb7d0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-052e77223b8574293",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_elb_service_account.current",
            "data.aws_iam_policy_document.atlantis_access_log_bucket_policy",
            "data.aws_region.current",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.atlantis_access_log_bucket.aws_s3_bucket.this",
            "module.atlantis_access_log_bucket.aws_s3_bucket_policy.this",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.combined",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.lb_log_delivery"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:listener/app/github-complete/c4e6024aacf028c2/b240ec4c618dd9b1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:listener/app/github-complete/c4e6024aacf028c2/b240ec4c618dd9b1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:loadbalancer/app/github-complete/c4e6024aacf028c2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_caller_identity.current",
            "data.aws_elb_service_account.current",
            "data.aws_iam_policy_document.atlantis_access_log_bucket_policy",
            "data.aws_region.current",
            "module.atlantis.module.alb.aws_lb.this",
            "module.atlantis.module.alb.aws_lb_target_group.main",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.atlantis_access_log_bucket.aws_s3_bucket.this",
            "module.atlantis_access_log_bucket.aws_s3_bucket_policy.this",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.combined",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.deny_insecure_transport",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.elb_log_delivery",
            "module.atlantis_access_log_bucket.data.aws_iam_policy_document.lb_log_delivery"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:targetgroup/github-complete/3c4e4d6d30dda13b",
            "arn_suffix": "targetgroup/github-complete/3c4e4d6d30dda13b",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:162193915932:targetgroup/github-complete/3c4e4d6d30dda13b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "github-complete",
            "port": 4141,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "target_type": "ip",
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_http_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:security-group/sg-02400d1b00a7067e7",
            "description": "Security group with HTTP ports open for specific IPv4 CIDR block (or everybody), egress ports are all world open",
            "egress": [],
            "id": "sg-02400d1b00a7067e7",
            "ingress": [],
            "name": "github-complete-alb-http-20211031224323494800000004",
            "name_prefix": "github-complete-alb-http-",
            "owner_id": "162193915932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e77223b8574293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_http_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2288362933",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02400d1b00a7067e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_http_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "140.82.112.0/20",
              "143.55.64.0/20",
              "185.199.108.0/22",
              "192.30.252.0/22",
              "62.65.197.60/32"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1199917350",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02400d1b00a7067e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_http_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3479922550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02400d1b00a7067e7",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_http_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_https_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:security-group/sg-09457112906412109",
            "description": "Security group with HTTPS ports open for specific IPv4 CIDR block (or everybody), egress ports are all world open",
            "egress": [],
            "id": "sg-09457112906412109",
            "ingress": [],
            "name": "github-complete-alb-https-20211031224325177100000005",
            "name_prefix": "github-complete-alb-https-",
            "owner_id": "162193915932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e77223b8574293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_https_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3678060901",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09457112906412109",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_https_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "140.82.112.0/20",
              "143.55.64.0/20",
              "185.199.108.0/22",
              "192.30.252.0/22",
              "62.65.197.60/32"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3706716831",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09457112906412109",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.alb_https_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-279073658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09457112906412109",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.atlantis_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:security-group/sg-0adfeacfed723c919",
            "description": "Security group with open port for Atlantis (4141) from ALB, egress ports are all world open",
            "egress": [],
            "id": "sg-0adfeacfed723c919",
            "ingress": [],
            "name": "github-complete-20211031224323372200000003",
            "name_prefix": "github-complete-",
            "owner_id": "162193915932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e77223b8574293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.atlantis.module.atlantis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3807118749",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0adfeacfed723c919",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.atlantis_sg.aws_security_group.this",
            "module.atlantis.module.atlantis_sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.atlantis_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Atlantis",
            "from_port": 4141,
            "id": "sgrule-3461339849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0adfeacfed723c919",
            "self": false,
            "source_security_group_id": "sg-09457112906412109",
            "to_port": 4141,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this",
            "module.atlantis.module.alb_https_sg.module.sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.atlantis_sg.aws_security_group.this",
            "module.atlantis.module.atlantis_sg.aws_security_group.this_name_prefix",
            "module.atlantis.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04430cbc973c7fdd3",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-210-54-217.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.54.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:internet-gateway/igw-051aa32a9a3cc56b5",
            "id": "igw-051aa32a9a3cc56b5",
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04430cbc973c7fdd3",
            "connectivity_type": "public",
            "id": "nat-09844f4d14b5df9c0",
            "network_interface_id": "eni-0a35cfc00f9751b27",
            "private_ip": "10.20.101.7",
            "public_ip": "52.210.54.217",
            "subnet_id": "subnet-072245edf48b038e9",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            }
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_eip.nat",
            "module.atlantis.module.vpc.aws_internet_gateway.this",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4977e5fd089d8771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09844f4d14b5df9c0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4977e5fd089d877",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_eip.nat",
            "module.atlantis.module.vpc.aws_internet_gateway.this",
            "module.atlantis.module.vpc.aws_nat_gateway.this",
            "module.atlantis.module.vpc.aws_route_table.private",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051aa32a9a3cc56b5",
            "id": "r-rtb-0bd89369d87d6cc541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd89369d87d6cc54",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_internet_gateway.this",
            "module.atlantis.module.vpc.aws_route_table.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:route-table/rtb-0b4977e5fd089d877",
            "id": "rtb-0b4977e5fd089d877",
            "owner_id": "162193915932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e77223b8574293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:route-table/rtb-0bd89369d87d6cc54",
            "id": "rtb-0bd89369d87d6cc54",
            "owner_id": "162193915932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e77223b8574293"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076fb6c26f90bd26d",
            "route_table_id": "rtb-0b4977e5fd089d877",
            "subnet_id": "subnet-02d65882932656df3"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.private",
            "module.atlantis.module.vpc.aws_subnet.private",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b6ffba87b68a2b",
            "route_table_id": "rtb-0b4977e5fd089d877",
            "subnet_id": "subnet-0425bba6f5994041f"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.private",
            "module.atlantis.module.vpc.aws_subnet.private",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bdea726df0add2e",
            "route_table_id": "rtb-0b4977e5fd089d877",
            "subnet_id": "subnet-05179fae4eeb43c37"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.private",
            "module.atlantis.module.vpc.aws_subnet.private",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddc248f447de4d39",
            "route_table_id": "rtb-0bd89369d87d6cc54",
            "subnet_id": "subnet-072245edf48b038e9"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.public",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a12e109622097d81",
            "route_table_id": "rtb-0bd89369d87d6cc54",
            "subnet_id": "subnet-04c9f8bf24abbc9cf"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.public",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0500f67952a1ccb21",
            "route_table_id": "rtb-0bd89369d87d6cc54",
            "subnet_id": "subnet-08171a19afdceb7d0"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_route_table.public",
            "module.atlantis.module.vpc.aws_subnet.public",
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-02d65882932656df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-02d65882932656df3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-0425bba6f5994041f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0425bba6f5994041f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-05179fae4eeb43c37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-05179fae4eeb43c37",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-072245edf48b038e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.101.0/24",
            "id": "subnet-072245edf48b038e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-04c9f8bf24abbc9cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.20.102.0/24",
            "id": "subnet-04c9f8bf24abbc9cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:subnet/subnet-08171a19afdceb7d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.20.103.0/24",
            "id": "subnet-08171a19afdceb7d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "vpc_id": "vpc-052e77223b8574293"
          },
          "dependencies": [
            "module.atlantis.module.vpc.aws_vpc.this",
            "module.atlantis.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.atlantis.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:162193915932:vpc/vpc-052e77223b8574293",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-09d47dd27885e14ab",
            "default_route_table_id": "rtb-056d1e712de856c17",
            "default_security_group_id": "sg-02117a27e19803aca",
            "dhcp_options_id": "dopt-05e9b219b69c9d286",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-052e77223b8574293",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-056d1e712de856c17",
            "owner_id": "162193915932",
            "tags": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "github-complete",
              "Owner": "user"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}